--- a/css/style.css
+++ b/css/style.css
@@ -153,21 +153,26 @@ h3 {
 }
 /* Benin */
 #benin div {
-  height: 100px;
-  width: 550;
+
 }
 
 #box20 {
   background-color: green;
   float: left;
+  height: 300px;
+  width: 150px;
 }
 
 #box21 {
   background-color: yellow;
+  height: 150px;
+  width: 500px;
 }
 
 #box22 {
   background-color: red;
+  height: 150px;
+  width: 500px;
 }
 /* UAE */
 
